form in progress

--- a/src/html/blocks/discover.html
+++ b/src/html/blocks/discover.html
@@ -5,6 +5,7 @@
             <div class="discover__desc">
                 <div class="discover__title">
                     <h1 class="title-1">Discover your favorite place with us</h1>
+                    <img src="./img/discover/underline.svg" alt="" class="title-decor">
                 </div>
                 <div class="discover__text">
                     <div class="text">
@@ -15,13 +16,15 @@
                         </p>
                     </div>
                 </div>
-<div class="discover__form">FORM</div>
-               <!--  Date and time
+                <div class="discover__form">
+                    @@include('./elements/form.html')
+                </div>
+                <!--  Date and time
                 e.g Bali, Indonesia
                 MM/DD/YYYY -->
             </div>
             <div class="discover__picture">
-<img src="./img/discover/hero-img.png" alt="" class="discover__picture-img">
+                <img src="./img/discover/hero-img.png" alt="" class="discover__picture-img">
             </div>
         </div>
     </div>
