--- a/src/html/blocks/elements/form.html
+++ b/src/html/blocks/elements/form.html
@@ -1,5 +1,14 @@
 <form action="" class="form">
-    <label for="" class="form__label">LOCATION</label>
-    <label for="" class="form__label">DATE</label>
-    <button class="form__btn">BTN</button>
+    <label for="" class="form__label">
+        <img src="./img/icons/map.svg" alt="" class="form__label-ico">
+        <span>Locations </span>
+        <input type="text" class="form__input" placeholder="e.g Bali, Indonesia">
+    </label>
+    <div class="form__devider"></div>
+    <label for="" class="form__label">
+        <img src="./img/icons/calendar.svg" alt="" class="form__label-ico">
+        <span>Date and Time </span>
+        <input type="date" class="form__input" placeholder="MM/DD/YYYY">
+    </label>
+    <button class="form__btn"><img src="./img/icons/search-btn.svg" alt="search-btn"></button>
 </form>
