CountryForm in working

--- a/src/html/blocks/elements/form.html
+++ b/src/html/blocks/elements/form.html
@@ -2,7 +2,8 @@
     <label for="" class="form__label">
         <img src="./img/icons/map.svg" alt="" class="form__label-ico">
         <span>Locations </span>
-        <input type="text" class="form__input" placeholder="e.g Bali, Indonesia">
+        <input id="autocompleteCountry" name="country" type="text" class="form__input" placeholder="e.g Bali, Indonesia"
+            autocomplete="off">
     </label>
     <div class="form__devider"></div>
     <label for="" class="form__label">
